barebone api skeleton

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Matthias Kupperschmidt",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.0"
   }
